2004-12-02  Bob Wilson  <bob.wilson@acm.org>

	* config/tc-xtensa.c (xtensa_switch_section_emit_state): Use subseg_set.
	(xtensa_restore_emit_state): Likewise.

2004-12-02  Alan Modra  <amodra@bigpond.net.au>

	* read.c (ALIGN_LIMIT): Define, increasing limit for BFD_ASSEMBLER.
	(s_align): Use it.

2004-11-30  Tero Niemela  <tero_niemela@yahoo.com>

	* Makefile.am: Change LOCALEDIR to $(datadir)/share.
	* Makefile.in: Regenerate.

2004-11-29  Tomer Levi  <Tomer.Levi@nsc.com>

	* config/tc-crx.c: Major code cleanup. Remove unused variables and
	functions, give functions a meaningful name, add comments.
	(check_range): New function - Replace operand size calculation
	with range checking.
	(assemble_insn): Update Algorithm, improve error issuing.
	(enum op_err): New.
	(process_label_constant): Bug fix regarding COP_BRANCH_INS relocation
	handling.

2004-11-29  Kazuhiro Inaoka <inaoka.kazuhiro@renesas.com>

	* config/tc-m32r.c (md_pcrel_from_section): Fixed a pcrel relocte
	miss between different section in the same module.
	(tc_gen_reloc): Likewise.

2004-11-25  Theodore A. Roth  <troth@openavr.org>

	* gas/config/tc-avr.c (mcu_types): Add support for atmega165,
	atmega325, atmega3250, atmega645 and atmega6450.

2004-11-25 Jan Beulich  <jbeulich@novell.com>

	* config/tc-i386.c (optimize_imm): Adjust immediates to only those
	permissible for the selected instruction suffix.
	(process_suffix): For DefaultSize instructions, suppressing the
	guessing of a 'q' suffix if the instruction doesn't support it is
	pointless, because only an 'l' suffix can be guessed in this place.

2004-11-24  Nick Clifton  <nickc@redhat.com>

	* config/tc-iq2000.c: Remove support for IQ10 processor.
	Convert to ISO C90 formatting.
	* config/tc-iq2000.h: Likewise.

2004-11-23  Nick Clifton  <nickc@redhat.com>

	* config/tc-mn10300.c (md_relax_table): More fixes to the offsets
	in this table.  They should be correct now.

2004-11-23 Jan Beulich <jbeulich@novell.com>
